# yolov5-detect

./: .gitignore  MANIFEST.in  README.md  setup.cfg
.github/workflows/: main.yml
src/yolov5detect/: annotation.py  detect.py  reader.py
src/yolov5detect/deep_sort/: deep_sort.py
src/yolov5detect/deep_sort/deep/reid/torchreid/: __init__.py
src/yolov5detect/deep_sort/deep/reid/torchreid/data/datasets/: __init__.py
src/yolov5detect/deep_sort/deep/reid/torchreid/data/datasets/image/: __init__.py
src/yolov5detect/deep_sort/deep/reid/torchreid/engine/: engine.py
src/yolov5detect/deep_sort/deep/reid/torchreid/models/: __init__.py  osnet.py
src/yolov5detect/deep_sort/deep/reid/torchreid/utils/: feature_extractor.py
src/yolov5detect/models/: backend.py
src/yolov5detect/utils/: color.py  rectangle.py  vision.py
yolov5detect/: detect.py
yolov5detect/models/: common.py  experimental.py  yolo.py
yolov5detect/utils/: rectangle.py  vision.py
