[metadata]
name = yolov5-detect
version = 0.1.13
author = Bruce Yu
author_email = 2432001677@qq.com
description = simple yolov5 wrapper for detect(onnx, dnn) 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/2432001677/yolov5-detect
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
